<resources>
    <string name="app_name">Planera</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="invalid_input">Invalid Input.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="brands_fragment">Brand</string>
    <string name="POB_fragment">POB</string>
    <string name="gift_fragment">GIFT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="choose">choose</string>
    <string name="no_internet">No Internet Connection !!</string>
    <string name="low">Low</string>
    <string name="regular">Regular</string>
    <string name="superr">Super</string>
    <!--====================================================================================-->

    <!--Google Places Api Key-->
    <style name="google_places_api_key">AIzaSyAKoSFtnNQG4KAHilYHstYay5s-1Pp33xs</style>

    <!--=======================================================================================-->
    <!--Category of Brands-->

    <string name="select">-Select-</string>


    <string-array name="Months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="title_activity_admin_panel">AdminPanelActivity</string>
    <string name="gujrat">Gujrat</string>
    <string name="title_activity_single_list">SingleListActivity</string>
    <string name="ranbaxy">Ranbaxy</string>
    <string name="first_name">First Name</string>
    <string name="_9669893930">9669893930</string>
    <string name="title_activity_update_chemist">ActivityUpdateChemist</string>
    <string name="title_activity_add_chemist">ActivityAddChemist</string>
    <string name="title_activity_update_doctor">ActivityUpdateDoctor</string>
    <string name="title_activity_update_user">ActivityUpdateUser</string>
    <string name="enter_state_name">Enter State Name</string>
    <string name="enter_patch_name">Enter Patch Name</string>
    <string name="enter_gift_name">Enter Gift Name</string>
    <string name="visits_2">Visits : 2</string>
    <string name="title_activity_crete_plan">ActivityCretePlan</string>
    <string name="title_activity_update_plan">ActivityUpdatePlan</string>
    <string name="title_activity_admin_reports">ActivityAdminReports</string>
    <string name="sample_fragment">SAMPLE</string>
    <string name="title_activity_change_password">ActivityChangepassword</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="title_activity_user_plan_create">ActivityUserPlanCreate</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_user_input_list">UserInputListActivity</string>
    <string name="title_activity_search_date_wise_input">SearchDateWiseInputActivity</string>
    <string name="no_data_available">No data available !</string>

    <string name="title_activity_upload_chemist">ActivityUploadChemist</string>
    <string name="select_file">Select File</string>
    <string name="file_name">File Name</string>
    <string name="upload">Upload</string>
    <string name="please_check_your_internet_connection">Please check your internet connection!</string>
    <string name="retry">Retry</string>

    //invalid inputs
    <string name="first_name_invalid">Invalid First Name</string>
    <string name="last_name">Invalid Last Name</string>
    <string name="dob">Invalid Date of Birth</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="qualification">Invalid Qualification</string>
    <string name="specialization">Invalid Specialization</string>
    <string name="phone">Invalid Phone</string>
    <string name="address">Invalid Address</string>
    <string name="pin_code">Invalid Pincode</string>
    <string name="district">Invalid District</string>
    <string name="state">Invalid State</string>
    <string name="city">Invalid City</string>
    <string name="shop_size">Invalid Shop Size</string>
    <string name="company_name">Invalid Company Name</string>
    <string name="monthly_potential">Invalid Monthly Volume Potential</string>
    <string name="billing_email">Invalid Billing Email</string>
    <string name="billing_phone">Invalid Billing Phone</string>
    <string name="rating">Invalid Rating</string>

    <string name="title_activity_upload_user">ActivityUploadUser</string>
    <string name="user_type">User Type</string>
    <string name="title_activity_login">login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="filter">Filter</string>
    <string name="upload_doctors">Upload Doctors</string>
    <string name="upload_chemist">Upload Chemist</string>
    <string name="john_deo">John Deo</string>
    <string name="john_deo123_gmail_com">John.deo123@gmail.com</string>
    <string name="mbbs">MBBS</string>
    <string name="todo">TODO</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="visit_1">Visit 1</string>
    <string name="edit">Edit</string>
    <string name="check_in">Check In</string>
    <string name="_5_km">5 km</string>
    <string name="confirm">Confirm</string>
    <string name="remark">Remark</string>
    <string name="demo_address">Demo Address</string>
    <string name="dr_aman_kashyap">Dr. Aman Kashyap</string>
    <string name="a">A</string>
    <string name="gift">Gift</string>
    <string name="comment">Comment</string>
    <string name="_2">2</string>
    <string name="abbott">Abbott</string>
    <string name="quantity">Quantity</string>
    <string name="upload_users">Upload Users</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="pob">POB</string>
    <string name="vika123_gmail_com">vika123@gmail.com</string>
    <string name="vikas">Vikas</string>
    <string name="_91_98765_43210">+91 98765-43210</string>
    <string name="_1_568_b_57_por_mohollo_opp_state_bank_of_india_athughar_timliyawad_nanpura_surat_gujrat_395001">1/568/B-57, Por Mohollo, Opp. State Bank of India, Athughar Timliyawad, Nanpura, Surat, Gujrat, 395001</string>
    <string name="change_password">Change Password</string>
    <string name="is_brand">Is Brand</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_code_you_received">Enter code you received</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="territory">Territory:</string>
    <string name="role">Role:</string>
    <string name="patch">Patch:</string>
    <string name="chemist">Chemist:</string>
    <string name="doctor">Doctor:</string>
    <string name="user">User:</string>
    <string name="send_to">Send To:</string>
    <string name="middle_name">Middle Name</string>
    <string name="preffered_meet_time">Preferred Meet Time</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="address_line_4">Address Line 4</string>
    <string name="billing_phone1">Billing Phone1</string>
    <string name="billing_phone2">Billing Phone2</string>


    <!--==============================================-->
    <string name = "add_chemist_details">Add Chemist\'s Detail</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="set_details">Set Details</string>
    <string name="_1">1</string>
    <string name="logo">Logo</string>
    <string name="update">Update</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_territory_name">Enter Territory Name</string>
    <string name="rajsthan">Rajsthan</string>
    <string name="joint">Joint</string>
    <string name="not_found_address">Address not found, Please Try again</string>
    <string name="query_over_limit">Query Over Limit ! You have exceeded your daily request quota for this API. If you did not set a custom daily request quota, verify your project has an active billing account: http://g.co/dev/maps-no-account</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_add_plan">Add Plan</string>
    <string name="title_update_chemist">Update Chemist\'s Detail</string>
    <string name="title_update_detail">Update Doctor\'s Detail</string>
    <string name="title_update_plan">Update Plan</string>
    <string name="title_user_input_list">User Input List</string>
</resources>
