<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  >


    <android.support.v7.widget.CardView
        style="@style/Base.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"

                >

                <TextView
                    android:id="@+id/text_name_first_letter"
                    style="@style/ExtraLargeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/fab_margin"
                    android:background="@drawable/bg_text_name"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="@color/colorGray" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1.9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_name"
                    style="@style/MediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/dr_aman_kashyap" />

                <RatingBar
                    android:id="@+id/rating_bar_doctor"
                    style="@style/rating_bar_doc" />

                <TextView
                    android:id="@+id/text_address"
                    style="@style/NormalTextBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/demo_address"
                    android:textColor="@color/colorGray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_remark"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:drawableStart="@drawable/icon_remark"
                    android:padding="3dp"
                    android:text="@string/remark"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="italic"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_status"
                    style="@style/LargeTextBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:text="@string/confirm"
                    android:textColor="@color/colorGreen"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_check_in"
                    style="@style/CheckInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/check_in"
                    android:textStyle="normal" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/text_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:text="@string/_5_km" />

                <ImageView
                    android:id="@+id/image_current_location_status"
                    android:layout_width="40dp"
                    android:padding="2dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="11dp"
                    android:src="@drawable/route"
                    android:contentDescription="@string/todo" />


            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>