<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/CardView"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:weightSum="3"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/layout_margin_top"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="2.2"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_top">

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="match_parent"
                android:text="@string/john_deo"
                style="@style/LargeTextBlack"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/text_user_email"
                style="@style/NormalTextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_deo123_gmail_com"
                android:gravity="center"
                android:drawableStart="@drawable/ic_email"/>

            <TextView
                android:id="@+id/text_user_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9669893930"
                android:gravity="center"
                android:drawableStart="@drawable/icon_phone"/>
            <TextView
                android:id="@+id/text_qualification"
                style="@style/NormalText"
                android:text="@string/mbbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>

        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_top"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:layout_height="wrap_content">




            <ImageView
                android:id="@+id/img_user_delete"
                android:padding="8dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/img_user_edit"
                android:padding="8dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/todo" />

        </LinearLayout>



    </LinearLayout>




</android.support.v7.widget.CardView>