<LinearLayout
    android:orientation="vertical"
    style="@style/BaseMargin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:padding="@dimen/drawable_padding"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            style="@style/NormalText"
            android:layout_height="wrap_content"
            android:text="@string/is_brand"/>
        <Switch
            android:theme="@style/MySwitch"
            android:id="@+id/switch_is_brand_edit"
            android:layout_width="wrap_content"
            style="@style/BaseMargin"
            android:layout_height="wrap_content" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="30dp"
            android:padding="@dimen/drawable_padding"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:id="@+id/input_layout_user_name"
            android:layout_height="wrap_content">

            <EditText
                style="@style/InputEditTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/enter_product_name"
                android:id="@+id/edit_text_name"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>


        <Button

            android:id="@+id/button_update_product"
            android:padding="@dimen/drawable_padding"
            style="@style/ButtonText"
            android:background="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:layout_gravity="end"
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>