<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/CardView"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_margin_top"
            android:layout_marginLeft="@dimen/layout_margin_top"
            android:layout_weight="2.2"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_top">


            <TextView
                android:id="@+id/text_doctor_name"
                style="@style/LargeTextBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/john_deo"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/text_doctor_email"
                style="@style/NormalTextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_deo123_gmail_com" />

            <TextView
                android:id="@+id/text_doctor_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9669893930" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_qualification"
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mbbs" />
                <TextView
                    android:id="@+id/text_patch_name_doctors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_4dp"
                    android:background="@drawable/bg_green_joint"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="patchId"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/dimen_4dp"
                    android:textColor="@color/colorWhite"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_top">


            <ImageView
                android:id="@+id/img_doctor_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                app:srcCompat="@drawable/icon_delete"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/img_doctor_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                app:srcCompat="@drawable/icon_edit"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>


    </LinearLayout>




</android.support.v7.widget.CardView>