<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp">

        <ImageView
            android:layout_height="match_parent"
            android:layout_width="300dp"
            android:src="@drawable/ic_launcher"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="0dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/EditTextLayoutStyle"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:id="@+id/input_layout_old_password"
            android:layout_height="wrap_content">

            <EditText
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:layout_width="match_parent"
                android:hint="@string/old_password"
                android:id="@+id/edit_old_password"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/icon_password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/EditTextLayoutStyle"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:id="@+id/input_layout_new_password"
            android:layout_height="wrap_content">

            <EditText
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:layout_width="match_parent"
                android:hint="@string/new_password"
                android:id="@+id/edit_new_password"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/icon_password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/BaseMargin"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            android:id="@+id/input_layout_confirm_password"
            android:layout_height="wrap_content">


            <EditText
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:layout_width="match_parent"
                android:hint="@string/confirm_password"
                android:id="@+id/edit_confirm_password"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/icon_password" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_height="0dp">
        <Button

            style="@style/ButtonText"
            android:id="@+id/button_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:text="@string/submit" />

    </LinearLayout>


</LinearLayout>